deployment/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: anish2272002/pdfcicd:backend1.4
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: mediafiles
              mountPath: /pdfproject/mediafiles
            - name: staticfiles
              mountPath: /pdfproject/staticfiles
      volumes:
        - name: mediafiles
        - name: staticfiles
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
